[package]
name = "penetrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
async-socks5 = "0.5.1"
async-trait = "0.1.69"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.2"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.3.10", features = ["derive"] }
hex = "0.4.3"
notify = "6.0.1"
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.7"
snowstorm = { version = "0.4.0", features = ["stream"] }
socket2 = "0.5.3"
tokio = { version = "1.29.1", features = ["full"] }
tokio-native-tls = "0.3.1"
toml = "0.7.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }


[dev-dependencies]
pretty_assertions = "1.3.0"
